# palletizer

./: .gitignore  0001-fix-ci-ruff-lint.patch  0001-physics-digital-twin.patch  0002-twin-all-demos.patch  0003-fix-duplicate-three.patch  0006-tests.patch  001-deps-and-env.patch  002-supabase-migration-rls.patch  003-architecture-doc.patch  004-supabase-clients.patch  005-shared-pricing-and-stripe-sdk.patch  006-auth-signin-and-callback.patch  007-stripe-api-routes.patch  008-leads-api.patch  009-pricing-ui-checkout-hst.patch  010-billing-page.patch  ARCHITECTURE.md  CHANGELOG.md  DEMO_REBUILD.md  INTEGRATION_INSTRUCTIONS.md  README.md  RobotShowcase.tsx  consistency-foundation.patch  fix-build-errors.sh  hotfix-middleware.sh  mobile-alignment.patch  mobile-images.patch  package-lock.json  palletizer-arm-cell-polish.patch  palletizer-arm-cell-v2-clean.patch  palletizer-arm-cell-v2.patch  palletizer-arm-realism.patch  palletizer-aws-shell.patch  palletizer-cell-os-v2.patch  palletizer-cell-os-v3.patch  palletizer-cell-scene.patch  palletizer-ci-fix.patch  palletizer-consistency.patch  palletizer-demo-rebuild-complete.patch  palletizer-edge-paths-fix.patch  (+15 more)
.github/workflows/: pypi-publish.yml  tests.yml
construction/: __init__.py  cli.py  constraints.py  pallet_optimizer.py  sku_library.py
core/: runtime_paths.py
core/ai/: __init__.py  vlm_exception_engine.py
core/connectors/: ur_bridge.py
core/simulation/: opcua_robot_mock.py
core/telemetry/: data_logger.py
docs/: SHELL_BLUEPRINT.md  construction-integration.md
examples/: mcp_smoke.py  native_benchmark.py  sample_skus.csv
examples/construction/: basic_construction_palletise.py
gateway/: demo_api.py  edge_orchestrator.py
mcp/: MCP_GUIDE.md  __init__.py  server.py
native/: CMakeLists.txt  README.md  __init__.py  accelerator.py  build.sh  palletizer_native.cpp
palletizer_full/: __init__.py  optimizer.py
ros2_integration/: README.md  __init__.py  hardware_bridge.py  lidar_perception.py  palletizer_ros2_node.py
scripts/: smoke-live.sh  verify_engine_parity.py
supabase/migrations/: 0001_auth_billing.sql
tests/: test_construction.py  test_mcp_server.py  test_native_invariants.py  test_optimizer.py
web/: .gitignore  middleware.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/api/adapt-plan/: route.ts
web/app/api/assistant/: route.ts
web/app/api/ingest/: route.ts
web/app/api/leads/: route.ts
web/app/api/optimize/: route.ts
web/app/api/stripe/checkout/: route.ts
web/app/api/stripe/portal/: route.ts
web/app/api/stripe/webhook/: route.ts
web/app/api/validate-stability/: route.ts
web/app/arm-library/: page.tsx
web/app/auth/callback/: route.ts
web/app/billing/: PortalButton.tsx  page.tsx
web/app/construction/: page.tsx
web/app/contact/: page.tsx
web/app/demo/: page.tsx
web/app/demos/: page.tsx
web/app/hardware/: page.tsx
web/app/integrations/: page.tsx
web/app/pricing/: page.tsx
web/app/privacy/: page.tsx
web/app/roi-calculator/: page.tsx
web/app/signin/: page.tsx
web/app/terms/: page.tsx
web/app/wms-ingest/: page.tsx
web/components/: AssistantWidget.tsx  CheckoutButton.tsx  EnterpriseLeadForm.tsx  Footer.tsx  Navbar.tsx  PalletVisualizer3D.tsx  ROICalculator.tsx  Section.tsx  SocialRow.tsx
web/components/demos/: CellScene.tsx  CellSimulator.tsx  Demos.tsx  IndustrialCell.tsx  InteractivePalletScene.tsx  PhysicsSettleScene.tsx  ProfiledArm.tsx  UrdfRobotCell.tsx  game.tsx  shared.tsx
web/components/ui/: Button.tsx
web/lib/: construction-optimizer.ts  pricing.ts  showcaseManifest.ts  social.ts  utils.ts
web/lib/palletizer/: cellsim.ts  copilot.ts  exports.ts  optimizer.ts  progress.ts  robotProfiles.ts  sampleData.ts  stability.ts  types.ts  urIK.ts  wmsIngest.ts
web/lib/stripe/: server.ts
web/lib/supabase/: client.ts  config.ts  middleware.ts  server.ts
web/public/urdf/ur10e/: ur10e.urdf
web/scripts/: fetch-ur10e-meshes.sh  parity-dump.ts  parser-check.ts
