[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "palletizer-full-stack"
version = "0.2.0"
description = "The open-source software foundation for high-throughput end-of-line palletising cells."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "iceccarelli"},
]
keywords = [
    "palletizer",
    "palletiser",
    "robotics",
    "industrial-automation",
    "robot-arm",
    "end-of-line",
    "pick-and-place",
    "open-source",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff==0.15.20",
]
edge = [
    "asyncua>=1.1",
    "pydantic>=2.5",
]
# Construction vertical optimizer. numpy is optional at runtime (pure-Python
# fallback exists) but recommended. ROS 2 / LiDAR dependencies (rclpy, sensor-msgs,
# open3d) are intentionally NOT listed here: they belong in a ROS 2 workspace, not a
# plain pip install. See ros2_integration/README.md.
construction = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/iceccarelli/palletizer"
Repository = "https://github.com/iceccarelli/palletizer"
Issues = "https://github.com/iceccarelli/palletizer/issues"
Changelog = "https://github.com/iceccarelli/palletizer/blob/main/CHANGELOG.md"

[project.scripts]
palletizer = "palletizer_full.run:main"
palletize-optimize = "palletizer_full.optimizer:cli"
palletize-construction = "construction.cli:main"

[tool.setuptools.packages.find]
include = ["palletizer_full*", "core*", "gateway*", "construction*", "ros2_integration*", "mcp*", "native*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
